k8s/subject-service/subject-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subject-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subject-app
  template:
    metadata:
      labels:
        app: subject-app
    spec:
      containers:
      - name: subject-service
        # IDE a lokális docker image-ed nevét kell írni. 
        image: flvvgiprojekt-subject-service:latest
        imagePullPolicy: Never 
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: subject-app-service 
spec:
  type: ClusterIP # Egyelőre csak belső hálózaton érhető el
  ports:
  - port: 5002
    targetPort: 5002
  selector:
    app: subject-app
