k8s/subject-service/subject-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subject-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subject-db
  template:
    metadata:
      labels:
        app: subject-db
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        volumeMounts:
        - name: subject-db-storage
          mountPath: /var/lib/mysql
        ports:
        - containerPort: 3306
      volumes:
      - name: subject-db-storage
        persistentVolumeClaim:
          claimName: subject-db-pvc  
---
apiVersion: v1
kind: Service
metadata:
  name: subject-db-service
spec:
  ports:
  - port: 3306
  selector:
    app: subject-db
