k8s/subject-service/subject-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subject-ingress
  annotations:     
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
spec:
  defaultBackend:                               
    service:
      name: subject-app-service
      port:
        number: 5002
  rules:
  - http:
      paths:
      - path: /api/subjects
        pathType: Prefix
        backend:
          service:
            name: subject-app-service
            port:
              number: 5002
